# noobi_fi

./: Cargo.toml  todo.md
research/: cahier-charge.md
webserver/: Cargo.toml
webserver/assets/styles/: counter.css  pico.css
webserver/src/: assets.rs  incus.rs  lib.rs  main.rs  utils.rs
webserver/src/incus/: index.rs
webserver/src/utils/: html.rs  http_request_unix_socket.rs
