[package]
name = "webserver"
version = "0.0.1"
edition = "2024"
authors = ["NolanV <git@nolan.contact>"]

[dependencies]
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.218", features = ["derive"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.2"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }
serde_json = "1.0.139"
